--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-	"appId": "io.ionic.starter",
+	"appId": "rolf.kopter.com",
 	"appName": "letstry",
 	"webDir": "www",
 	"bundledWebRuntime": false
