--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.0",
     "@capacitor/status-bar": "4.1.1",
-    "@ionic/angular": "^6.1.9",
+    "@ionic/angular": "^7.0.1",
+    "@supabase/supabase-js": "^2.14.0",
     "ionicons": "^6.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -60,6 +61,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "supabase": "^1.50.3",
     "ts-node": "~8.3.0",
     "typescript": "~4.8.4"
   },
